# report_system

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/advanced/: AdvancedBuilderExample.cpp  DecoratorExample.cpp
examples/simple/: SimpleFactoryExample.cpp
include/builders/: ReportBuilder.h
include/core/: DataProcessor.h  DataProvider.h  ExportStrategy.h  Formatter.h  Report.h
include/data_processors/: FilterProcessor.h
include/data_providers/: CsvDataProvider.h
include/decorators/: LoggingDecorator.h
include/export_strategies/: FileExportStrategy.h
include/factories/: ReportFactory.h  SalesReportFactory.h
include/formatters/: HtmlFormatter.h
src/: CMakeLists.txt
src/builders/: ReportBuilder.cpp
src/core/: Report.cpp
src/data_processors/: FilterProcessor.cpp
src/data_providers/: CsvDataProvider.cpp
src/decorators/: LoggingDecorator.cpp
src/export_strategies/: FileExportStrategy.cpp
src/factories/: ReportFactory.cpp  SalesReportFactory.cpp
src/formatters/: HtmlFormatter.cpp
tests/: CMakeLists.txt
tests/integration/: DecoratorTest.cpp  FullReportPipelineTest.cpp
tests/mocks/: MockDataProcessor.cpp  MockDataProcessor.h  MockDataProvider.cpp  MockDataProvider.h  MockEmailService.cpp  MockEmailService.h  MockExportStrategy.cpp  MockExportStrategy.h  MockFormatter.cpp  MockFormatter.h
tests/unit/: DataProcessorTest.cpp  ErrorHandlingTest.cpp  ExportStrategyTest.cpp  ReportBuilderTest.cpp  ReportFactoryTest.cpp
